Created hello-world.pde - shows a white circle in grey background....fun

--- a/trace.html
+++ b/trace.html
@@ -4,6 +4,6 @@
 	<script type="text/javascript" src="scripts/processing.js"></script>
 </head>
 <body>
-	<canvas data-processing-sources="hello-web.pde"></canvas>
+	<canvas data-processing-sources="./pde/hello-world.pde"></canvas>
 </body>
 </html>
