--- a/frontend/trace.html
+++ b/frontend/trace.html
@@ -4,6 +4,6 @@
 	<script type="text/javascript" src="scripts/processing.js"></script>
 </head>
 <body>
-	<canvas data-processing-sources="./pde/hello-world.pde"></canvas>
+	<canvas data-processing-sources="./tests/bounding-area-test.pde"></canvas>
 </body>
 </html>
