Did a large portion of the trace game demo:
1. Kept the D3 bubbles (will be grey outside of "e" and colored inside)
2. Changed styles (stroke thickness, background color, etc)
3. Placed a canvas on top to draw a line when the cursor is in the "e". This line is made of circles to
   create thicker line. TODO: interpolate to remove spaces between mousemove updates
4. Border becomes red when mouse leaves the letter

--- a/frontend/processing/tests/fade-test/index.html
+++ b/frontend/processing/tests/fade-test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Trace</title>
-	<script type="text/javascript" src="../../scripts/processing.js"></script>
+	<script type="text/javascript" src="../../../scripts/processing.js"></script>
 </head>
 <body>
 	<canvas data-processing-sources="./fade.pde"></canvas>
