Began work on comparing definitions (compareDefs.py). The function takes a JSON file name, opens the file, and decodes the string into an object. Python has many functions to find elements in an array, so the idea would be to loop through every object in the JSON object, get the definition of the word, and find all occurrences of that definition in the array.

--- a/frontend/trace/index.html
+++ b/frontend/trace/index.html
@@ -17,7 +17,7 @@
   <!-- STYLESHEETS -->
   <link rel="stylesheet" type="text/css" href="trace.css">
 </head>
-<body style="background-color:#555">
+<body>
   <canvas id="bg-image"></canvas>
   <!-- MAIN VIEW -->
   <svg id="screen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
